# LLVMIR_BackwardSlicer_with_SVF

./: CMakeLists.txt  README.md  testtool.cpp  testtool_new.cpp
BackwardAnalysis/src/: backwardAnalysis.cpp
TraceAllComponents/: CMakeLists.txt
TraceAllComponents/src/: CMakeLists.txt  printAllComponents.cpp  traceAllComponents.cpp
include/: UtilDef.h  backwardslice.h  backwardslice_test.h  slice_test.h  traceallcomponents.h
lib/: CMakeLists.txt
lib/BackwardSlice/: CMakeLists.txt  backwardslice.cpp  backwardslice_old.h
lib/BackwardSlice_test/: CMakeLists.txt  backwardslice_test.cpp  slice_test.cpp
lib/TraceAllComponents/: CMakeLists.txt  traceallcomponents.cpp
lib/UtilDef/: CMakeLists.txt  UtilDef.cpp
testfiles/: test.ll
testfiles/ir/: test.ll  test2.ll  test_array.ll  test_callbyref.ll  test_class.ll  test_class2.ll  test_etc.ll  test_for.ll  test_func.ll  test_func2.ll  test_func3.ll  test_func4.ll  test_func_params.ll  test_func_pointer.ll  test_func_recursion.ll  test_if.ll  test_if2.ll  test_pointer.ll  test_switch.ll
testfiles/src/: test.cpp  test2.cpp  test_array.cpp  test_callbyref.cpp  test_class.cpp  test_class2.cpp  test_etc.cpp  test_for.cpp  test_func.cpp  test_func2.cpp  test_func3.cpp  test_func4.cpp  test_func_params.cpp  test_func_pointer.cpp  test_func_recursion.cpp  test_if.cpp  test_if2.cpp  test_pointer.cpp  test_switch.cpp
